--- a/learning_cards/card/templates/category/add_category.html
+++ b/learning_cards/card/templates/category/add_category.html
@@ -13,7 +13,12 @@
 
 {% block content %}
 
-    <form action="{% url 'add_category' %}" method="post" xmlns="http://www.w3.org/1999/html">
+    <form action="{%if submit_title == 'Update' %}
+                              {% url 'update_category' category.slug %}
+                          {% else %}
+                              {% url 'add_category' %}
+                          {% endif %}" method="post"
+          xmlns="http://www.w3.org/1999/html">
         {% csrf_token %}
             <p ><label class="form-group"  for="{{ form.name.id_for_label }}">{{ form.name.label }}  </label>{{ form.name }}</p>
             <div class="form-error">{{ form.name.errors }}</div>
@@ -21,7 +26,12 @@
             <div class="form-error">{{ form.slug.errors }}</div>
             <p><label class="form-group" for="{{ form.description.id_for_label }}">{{ form.description.label }}  </label>{{ form.description }}</p>
             <div class="form-error">{{ form.name.errors }}</div>
-            <button type="submit" class="btn btn-primary">Add</button>
-
+            <button type="submit" class="btn btn-primary">{{ submit_title }}</button>
     </form>
+    <p></p>
+    {% if category %}
+        <p>
+            <a class="btn btn-danger"  href="{% url 'delete_category' category.slug %}" role="button">Delete</a>
+        </p>
+    {% endif %}
 {% endblock %}
