--- a/learning_cards/card/templates/category/category.html
+++ b/learning_cards/card/templates/category/category.html
@@ -11,6 +11,7 @@
 {% endblock%}
 
 {% block content %}
+            <a class="btn btn-outline-info btn-lg btn-block"  href="{% url 'update_category' category.slug %}" role="button">Update category</a>
             <a class="btn btn-outline-info btn-lg btn-block"  href="{% url 'add_card' category.slug %}" role="button">Add card</a>
             <ol>
                 {% for card in cards %}
