--- a/learning_cards/learning_cards/templates/learning_cards/base.html
+++ b/learning_cards/learning_cards/templates/learning_cards/base.html
@@ -91,6 +91,13 @@
         </form>
       </div>
     </nav>
+           {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+           {% endif %}
 
             <div class="jumbotron">
               <h1>
