refactor user registration to make Profile in registration(default limit). Add Statistic model to make user statistic for period and rebuild algorithm that get_lerning_cards for day

--- a/learning_cards/card/templates/box/boxes.html
+++ b/learning_cards/card/templates/box/boxes.html
@@ -11,7 +11,7 @@
 {% endblock%}
 
 {% block content %}
-            <a class="btn btn-outline-info btn-lg btn-block"  href="{% url 'add_box' %}" role="button">Add box</a>
+            <a class="btn btn-outline-info btn-md btn-block"  href="{% url 'add_box' %}" role="button">Add box</a>
             <ol>
                 {% for box in boxes %}
                     <li>
