--- a/learning_cards/card/templates/category/categories.html
+++ b/learning_cards/card/templates/category/categories.html
@@ -11,7 +11,7 @@
 {% endblock%}
 
 {% block content %}
-            <a class="btn btn-outline-info btn-lg btn-block"  href="{% url 'add_category' %}" role="button">Add category</a>
+            <a class="btn btn-outline-info btn-md btn-block"  href="{% url 'add_category' %}" role="button">Add category</a>
             <ol>
                 {% for c in categories %}
                     <li>
