--- a/learning_cards/card/templates/learn/choice_box.html
+++ b/learning_cards/card/templates/learn/choice_box.html
@@ -18,9 +18,9 @@
                     <p>Cards to repeat: {{repeat}}</p>
                     <p><a class="btn btn-outline-info btn-md btn-block"  href="{% url 'repeat' %}" role="button">Repeat</a></p>
                 </div>
-                Learned today: {{ learned }} / {{ form.number_of_cards }}
+                Learned today: {{ learned }} / {{ form.day_limit }}
                 <button type="submit" class="btn btn-outline-info btn-sm" data-toggle="tooltip" data-placement="top" title="Goal for day">Change</button>
-                <div class="form-error">{{ form.number_of_cards.errors }}</div>
+                <div class="form-error">{{ form.day_limit.errors }}</div>
 
             </form>
             <ol>
