--- a/learning_cards/card/templates/learn/learn.html
+++ b/learning_cards/card/templates/learn/learn.html
@@ -1,4 +1,11 @@
 {% extends 'learning_cards/base.html' %}
+<meta charset="utf-8" />
+    <style>
+      html, body, #container {
+        width: 70%;
+        height: 100%;
+      }
+    </style>
 
 {% block title %}
     {{ title }}
@@ -12,6 +19,21 @@
 {% endblock%}
 
 {% block content %}
+            <div id="container"></div>
+                 <script src="https://cdn.anychart.com/js/latest/anychart-bundle.min.js"></script>
+                    <script>
+                        const dataa = {{ statistics | safe}}
+                      anychart.onDocumentLoad(function() {
+                                  // create chart and set data
+                                  // as Array of Objects
+                                  var chart = anychart.column();
+                                  chart.data({header: ["#", "Learned", "Repeated"],
+                                   rows:dataa});
+                                  chart.title("Statistics");
+                                  chart.legend(true);
+                                  chart.container("container").draw();
+                                });
+                    </script>
             <form action="{% url 'learn' %}" method="post" xmlns="http://www.w3.org/1999/html">
                 {% csrf_token %}
                 <div>
