--- a/learning_cards/card/templates/learn/learn.html
+++ b/learning_cards/card/templates/learn/learn.html
@@ -13,8 +13,6 @@
 
 {% block content_title %}
 
-    {{ title }}
-
 
 {% endblock%}
 
@@ -38,18 +36,19 @@
                 {% csrf_token %}
                 <div>
                     <p>Cards to repeat: {{repeat}}</p>
-                    <p><a class="btn btn-outline-info btn-md btn-block"  href="{% url 'repeat' %}" role="button">Repeat</a></p>
+                    <p><a class="btn btn-outline-info btn-md btn-block"  href="{% url 'repeat' %}" role="button">Repeat cards</a></p>
                 </div>
                 Learned today: {{ learned }} / {{ form.day_limit }}
                 <button type="submit" class="btn btn-outline-info btn-sm" data-toggle="tooltip" data-placement="top" title="Goal for day">Change</button>
                 <div class="form-error">{{ form.day_limit.errors }}</div>
 
             </form>
+            <p>
+                <h2>{{ title }}</h2>
+            </p>
             <ol>
                 {% for box in boxes %}
-                    <li>
-                        <a class="lead" href="{% url 'learning' box.slug %}">{{ box.name }}</a>
-                    </li>
+                        <a class="btn btn-outline-success btn-lg btn-block" href="{% url 'learning' box.slug %}">{{ box.name }}</a>
                 {% endfor %}
             </ol>
 
